[Fix] -> Author image and text alignment in comment section. Reply and Edit text word gap.

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -5051,14 +5051,14 @@ input[type="color"]::-webkit-color-swatch {
 .ast-edit-link {
   position: absolute;
   top: 0;
-  left: 50px;
+  left: 65px;
   margin-top: 32px;
 }
 
 .ast-comment-avatar-wrap {
   float: right;
   clear: left;
-  margin-left: 2.33333em;
+  margin-left: 1.7em;
 }
 
 @media (max-width: 768px) {
@@ -5085,7 +5085,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .ast-comment-content {
   clear: both;
-  margin-right: 7.33333em;
+  margin-right: 6.5em;
 }
 
 .ast-comment-cite-wrap {
